--- a/views/home.erb
+++ b/views/home.erb
@@ -11,7 +11,6 @@
 
     html {
       font-family: 'Droid Sans Mono', serif !important;
-      /*font-weight: 400 !important;*/
     }
 
     #links_holder {
@@ -41,7 +40,7 @@
 <body>
 
 <div class="row">
-  <div class="col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+  <div class="col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
 
     <img src="/img/1.png" alt="img1" class="img-responsive">
     <div class="text_block">
