--- a/views/cv.erb
+++ b/views/cv.erb
@@ -19,10 +19,37 @@
       padding: 10px;
     }
 
+    h1 {
+      color: #5e8fae;
+      font-family: 'Open Sans', sans-serif !important;
+      font-weight: 700;
+    }
+
+    .cv-download-link {
+      font-size: 80%;
+      color: #222222;
+    }
+
+    .cv-download-link:hover, .cv-download-link:focus {
+      color: #222222;
+    }
+
     h3 {
-      color: black;
+      color: #222222;
+      font-family: 'Open Sans', sans-serif !important;
       font-size: 130%;
       font-weight: 700;
+    }
+
+    hr {
+      background-color: #5e8fae;
+      height: 1px;
+      margin-bottom: 40px;
+    }
+
+    .cv-caption {
+      display: inline-block;
+      width: 170px;
     }
 
     .cv-blue {
@@ -32,9 +59,17 @@
     }
 
     .cv-bold {
-      color: black;
+      color: #222222;
       font-size: 110%;
       font-weight: 700;
+    }
+
+    .cv-block-1 {
+      margin-top: 20px;
+    }
+
+    .cv-block-2 {
+      margin-top: 20px;
     }
 
   </style>
@@ -49,6 +84,7 @@
       <img src="/photo.jpg" alt="photo" class="img-responsive pull-right" style="max-width: 170px;">
 
       <h1>Bc. Klára Halamková</h1>
+      <a class="cv-download-link" href="/cv/klara_halamkova.pdf">(stáhnout jako .pdf)</a>
       <h3>Personal details</h3>
 
       <span class="cv-blue cv-caption">Address:</span>Korunovační 980/23, 150 00 Praha<br>
