tiny color & text alterations

--- a/views/cv.erb
+++ b/views/cv.erb
@@ -20,7 +20,7 @@
     }
 
     h1 {
-      color: #5e8fae;
+      color: #4F8A9E;
       font-family: 'Open Sans', sans-serif !important;
       font-weight: 700;
     }
@@ -42,7 +42,7 @@
     }
 
     hr {
-      background-color: #5e8fae;
+      background-color: #4F8A9E;
       height: 1px;
       margin-bottom: 40px;
     }
@@ -53,7 +53,7 @@
     }
 
     .cv-blue {
-      color: #5e8fae;
+      color: #4F8A9E;
       font-size: 110%;
       font-weight: 700;
     }
@@ -100,7 +100,7 @@
 
       <div class="cv-block-2">
         <span class="cv-bold">2016</span><br>
-        <span class="cv-blue">Traffic manager at DIGI Akademie, s.r.o. in Prague</span><br>
+        <span class="cv-blue">Operation manager at DIGI Akademie, s.r.o. in Prague</span><br>
         <p class="text-justify">
           Coordination of the training centre, including management of educational environment, client
           reception, and organization of educational events. Communication with clients, management of
