--- a/views/home.erb
+++ b/views/home.erb
@@ -54,7 +54,7 @@
     </div>
     <img src="/img/2.png" alt="img2" class="img-responsive" id="img_with_links">
     <div class="text_block">
-      Currently there is a large distance in space between us which I can cover in <br>
+      Currently there is a large distance in space between us which I can overcome in <br>
       two months. Meanwhile I'm sending two shuttlepods loaded with an overview of <br>
       my present work experience.
     </div>
