damn language switching

--- a/views/cv.erb
+++ b/views/cv.erb
@@ -84,7 +84,7 @@
       <img src="/photo.jpg" alt="photo" class="img-responsive pull-right" style="max-width: 170px;">
 
       <h1>Bc. Klára Halamková</h1>
-      <a class="cv-download-link" href="/cv/klara_halamkova.pdf">(stáhnout jako .pdf)</a>
+      <a class="cv-download-link" href="/cv/klara_halamkova.pdf">(download as .pdf)</a>
       <h3>Personal details</h3>
 
       <span class="cv-blue cv-caption">Address:</span>Korunovační 980/23, 150 00 Praha<br>
